--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_to_order">Add to order</string>
+    <string name="orderitem_subtract">-</string>
+    <string name="orderitem_add">+</string>
+    <string name="orderitem_price">%.2f PLN</string>
 
     <!--  Spinner  -->
     <!--  This will probably change or will be rendered dynamically  -->
