created string resources for frgamgnet order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,10 @@
     <string name="orderitem_subtract">-</string>
     <string name="orderitem_add">+</string>
     <string name="product_price">%.2f PLN</string>
+    <string name="order_total">Total: %.2f</string>
     <string name="recommended_text">Our recommendation</string>
     <string name="bestseller_text">Bestseller</string>
+    <string name="buy_text">Checkout</string>
 
     <!--  Spinner  -->
     <!--  This will probably change or will be rendered dynamically  -->
